Client Bug update 连接管理问题调整 修改tcp的连接响应方式。 file chunk struct changed store interface update
finish slice debug one step...
SubscribeOn(Schedules.boundedElastic)
update name
create test module
1.debug single file self upload finish
2.debug single file self download finish range,if-range
continue:
1.single slice upload all finish,
2.dft command truansfer
3.master elect
4.upload
5.download